<resources>
    <string name="app_name">ScannerApp</string>
    <string name="title_folder">Folder</string>
    <string name="title_scan">Scan</string>
    <string name="title_history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_folder_title">All documents</string>
    <string name="str_login">Login</string>
    <string name="str_password">Password</string>
    <string name="email_example">example@example.com</string>
    <string name="str_proceed">Proceed</string>
    <string name="str_dont_have_account"><u>I don\'t have an account</u></string>
    <string name="str_register">Register</string>
    <string name="str_scan">Scan</string>
    <string name="str_scanner">Scanner</string>

</resources>